--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,57 +2,65 @@
   "myProfile": "Мой Профиль",
   "allProducts": "Все Продукты",
   "loadMore": "Загрузить Больше",
-  "adidasTitle": "Мужские Беговые Кроссовки Adidas",
-  "adidasText": "Производительность и дизайн. Доведено до предела.",
+  "adidasTitle": "Кроссовки Adidas для Мужчин",
+  "adidasText": "Производительность и дизайн. Прямо на грани.",
   "adidasBtn": "КУПИТЬ СЕЙЧАС",
   "servisTitle1": "БЕСПЛАТНАЯ ДОСТАВКА",
   "servisTitle2": "100% ВОЗВРАТ",
   "servisTitle3": "ПОДДЕРЖКА 24/7",
-  "servisComment": "Lorem Ipsum - это просто текст-заполнитель в полиграфической и издательской индустрии.",
-  "topRatedTitle": "САМЫЕ ВЫСОКО ОЦЕНЕННЫЕ ПРОДУКТЫ",
-  "footerText1": "Lorem Ipsum - это просто текст-заполнитель в полиграфической и издательской индустрии. Lorem Ipsum является стандартным текстом-заполнителем в индустрии с 1500-х годов.",
-  "footerText2": "С 1500-х годов, когда неизвестный печатник взял галерею типов и перемешал.",
-  "footerText3": "E-Comm, 4578 Marmora Road, Глазго D04 89GR",
-  "footerTitle1": "Следите за нами",
-  "footerTitle2": "Свяжитесь с нами",
+  "servisComment": "Lorem Ipsum — это простой текст печатной и типографической промышленности.",
+  "topRatedTitle": "САМЫЕ ВЫСОКИЕ ОЦЕНКИ ПРОДУКТОВ",
+  "footerText1": "Lorem Ipsum — это простой текст печатной и типографической промышленности. Lorem Ipsum используется в качестве стандартного текста с 1500-х годов.",
+  "footerText2": "С 1500-х годов, когда неизвестный печатник взял галерею и перемешал.",
+  "footerText3": "E-Comm, 4578 Marmora Road, Glasgow D04 89GR",
+  "footerTitle1": "Следите за Нами",
+  "footerTitle2": "Свяжитесь с Нами",
   "singleProductAvailability": "Наличие",
   "singleProductCategory": "Категория",
   "singleProductFreeShipping": "Бесплатная доставка",
   "singleProductInStock": "В наличии",
   "singleProductAccessories": "Аксессуары",
   "AddToCartBtn": "Добавить в корзину",
-  "singleProductFaccbook": "Поделиться на Facebook",
-  "singleProductTwitter": "Поделиться на Twitter",
-  "singleProductInformationTitle": "Информация о продукте",
+  "singleProductFaccbook": "Поделиться в Facebook",
+  "singleProductTwitter": "Поделиться в Twitter",
+  "singleProductInformationTitle": "Информация о Продукте",
   "cartProduct": "Продукт",
+  "backToHome": "Вернуться на Главную",
   "cartPrice": "Цена",
-  "cartQuantity": "Количество",
+  "cartQuantity": "Кол-во",
   "cartUintPrice": "Цена за единицу",
   "cartSubtotal": "Промежуточный итог",
-  "cartShippingFee": "Плата за доставку",
+  "cartShippingFee": "Стоимость доставки",
   "cartCoupon": "Купон",
+  "hasCoupon": "Нет",
   "cartTotal": "Итого",
   "cartCheckOut": "Оформить заказ",
-  "cartEmpty": "В данный момент в корзину не добавлены продукты!!!",
-  "login": "Войти",
-  "loginSubTitle": "Введите свои учетные данные, чтобы получить доступ к своему аккаунту.",
-  "loginEmail": "Эл. почта",
+  "cartEmpty": "В корзине нет добавленных продуктов!!!",
+  "login": "Вход",
+  "loginSubTitle": "Введите свои учетные данные для доступа к вашей учетной записи.",
+  "loginEmail": "Электронная почта",
   "loginPassword": "Пароль",
-  "loginQuestion": "У вас нет аккаунта?",
+  "loginQuestion": "Нет учетной записи?",
   "regiserHere": "Зарегистрируйтесь здесь",
   "forgotPassword": "Забыли пароль?",
   "register": "Регистрация",
-  "registerSubtitle": "Введите свои данные, чтобы создать аккаунт.",
+  "registerSubtitle": "Введите свои данные для создания учетной записи.",
   "registerName": "Имя",
-  "registerEmail": "Эл. почта",
+  "registerEmail": "Электронная почта",
   "registerPhone": "Телефон",
   "registerStreet": "Улица",
   "registerApartment": "Квартира",
-  "registerZip": "Индекс",
+  "registerZip": "Почтовый индекс",
   "registerCity": "Город",
   "registerCountry": "Страна",
   "registerBtn": "Зарегистрироваться",
-  "registerQuestion": "У вас уже есть аккаунт?",
-  "loginHere": "Войти здесь",
-  "mostTopProductRates": "САМЫЕ ВЫСОКО ОЦЕНЕННЫЕ ПРОДУКТЫ"
+  "registerQuestion": "Уже есть учетная запись?",
+  "loginHere": "Вход здесь",
+  "mostTopProductRates": "САМЫЕ ВЫСОКИЕ ОЦЕНКИ ПРОДУКТОВ",
+  "loginSuccessful": "Вход успешен",
+  "loginFailed": "Вход не удался",
+  "invalidEmailOrPassword": "Неверная электронная почта или пароль",
+  "plsTryAgain": "Пожалуйста, попробуйте еще раз!",
+  "registerSuccessful": "Регистрация успешна",
+  "registerFailed": "Регистрация не удалась"
 }
