--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -3,48 +3,50 @@
   "allProducts": "Barcha Mahsulotlar",
   "loadMore": "Ko'proq Yuklash",
   "adidasTitle": "Adidas Erkaklar Yugurish Krossovkalari",
-  "adidasText": "Performance va dizayn. Chegaraga yetkazilgan.",
-  "adidasBtn": "HOZIR XARID QILING",
-  "servisTitle1": "BEKOR YETKAZISH",
+  "adidasText": "Ishlash va dizayn. To'g'ridan-to'g'ri chegara tomon.",
+  "adidasBtn": "XARID QILING",
+  "servisTitle1": "BEPAUL TEZKORLIK",
   "servisTitle2": "100% QAYTARISH",
-  "servisTitle3": "24/7 QO'LLAB-QUVVATLASH",
-  "servisComment": "Lorem Ipsum matnining chop etish va tahrirlash sanoatining oddiy namunasidir.",
-  "topRatedTitle": "ENG YUQORI BAHOLANGAN MAHSULOTLAR",
-  "footerText1": "Lorem Ipsum matnining chop etish va tahrirlash sanoatining oddiy namunasidir. Lorem Ipsum 1500-yillardan beri sanoatning standart matni hisoblanadi.",
-  "footerText2": "1500-yillardan beri, noma'lum printer bir turdagi galereyani olib, aralashtirganda.",
-  "footerText3": "E-Comm, 4578 Marmora ko'chasi, Glasgow D04 89GR",
-  "footerTitle1": "Bizni kuzatib boring",
-  "footerTitle2": "Biz bilan bog'lanish",
-  "singleProductAvailability": "Mavjudligi",
+  "servisTitle3": "24/7 QO‘LLAB-QUVVATLASH",
+  "servisComment": "Lorem Ipsum bosma va tayyorlash sanoatining oddiy matnidir.",
+  "topRatedTitle": "ENG YUQORI RAYO BILAN MAHSULOTLAR",
+  "footerText1": "Lorem Ipsum bosma va tayyorlash sanoatining oddiy matnidir. Lorem Ipsum 1500-yillardan buyon sanoatning standart dummy matni.",
+  "footerText2": "1500-yillardan buyon, noma'lum chop etuvchi bir guruh turini bir joyga yig'gan.",
+  "footerText3": "E-Comm, 4578 Marmora Yo'li, Glasgow D04 89GR",
+  "footerTitle1": "Bizni Kuzatib Borish",
+  "footerTitle2": "Biz bilan Aloqa",
+  "singleProductAvailability": "Mavjudlik",
   "singleProductCategory": "Kategoriya",
   "singleProductFreeShipping": "Bepul yetkazib berish",
-  "singleProductInStock": "Omborda mavjud",
-  "singleProductAccessories": "Aksessuarlar",
+  "singleProductInStock": "Omborda",
+  "singleProductAccessories": "Aksesuarlar",
   "AddToCartBtn": "Savatga qo'shish",
-  "singleProductFaccbook": "Facebookda ulashing",
-  "singleProductTwitter": "Twitterda ulashing",
-  "singleProductInformationTitle": "Mahsulot haqida ma'lumot",
+  "singleProductFaccbook": "Facebook'da bo'lishish",
+  "singleProductTwitter": "Twitter'da bo'lishish",
+  "singleProductInformationTitle": "Mahsulot Haqida Ma'lumot",
   "cartProduct": "Mahsulot",
+  "backToHome": "Bosh sahifaga qaytish",
   "cartPrice": "Narx",
   "cartQuantity": "Miqdor",
   "cartUintPrice": "Birlik Narxi",
-  "cartSubtotal": "Jami",
+  "cartSubtotal": "O'rtacha summa",
   "cartShippingFee": "Yetkazib berish to'lovi",
   "cartCoupon": "Kupon",
-  "cartTotal": "Jami",
-  "cartCheckOut": "To'lovni amalga oshirish",
-  "cartEmpty": "Hozircha savatga qo'shilgan mahsulotlar yo'q!!!",
+  "hasCoupon": "Yo'q",
+  "cartTotal": "Umumiy",
+  "cartCheckOut": "To'lash",
+  "cartEmpty": "Savatda hozirda hech qanday mahsulot yo'q!!!",
   "login": "Kirish",
   "loginSubTitle": "Hisobingizga kirish uchun ma'lumotlaringizni kiriting.",
-  "loginEmail": "Email",
+  "loginEmail": "Elektron pochta",
   "loginPassword": "Parol",
   "loginQuestion": "Hisobingiz yo'qmi?",
   "regiserHere": "Bu yerda ro'yxatdan o'ting",
   "forgotPassword": "Parolni unutdingizmi?",
   "register": "Ro'yxatdan o'tish",
-  "registerSubtitle": "Hisobingizni yaratish uchun ma'lumotlaringizni kiriting.",
+  "registerSubtitle": "Hisob yaratish uchun ma'lumotlaringizni kiriting.",
   "registerName": "Ism",
-  "registerEmail": "Email",
+  "registerEmail": "Elektron pochta",
   "registerPhone": "Telefon",
   "registerStreet": "Ko'cha",
   "registerApartment": "Kvartira",
@@ -52,7 +54,13 @@
   "registerCity": "Shahar",
   "registerCountry": "Mamlakat",
   "registerBtn": "Ro'yxatdan o'tish",
-  "registerQuestion": "Hisobingiz bormi?",
+  "registerQuestion": "Allaqachon hisobingiz bormi?",
   "loginHere": "Bu yerda kirish",
-  "mostTopProductRates": "ENG YUQORI BAHOLANGAN MAHSULOTLAR"
+  "mostTopProductRates": "ENG YUQORI RAYO BILAN MAHSULOTLAR",
+  "loginSuccessful": "Kirish muvaffaqiyatli",
+  "loginFailed": "Kirish muvaffaqiyatsiz",
+  "invalidEmailOrPassword": "Noto'g'ri elektron pochta yoki parol",
+  "plsTryAgain": "Iltimos, qayta urinib ko'ring!",
+  "registerSuccessful": "Ro'yxatdan o'tish muvaffaqiyatli",
+  "registerFailed": "Ro'yxatdan o'tish muvaffaqiyatsiz"
 }
